list spacing fix

--- a/_includes/beatrice/01-atoms/01-typography/_01-typography.scss
+++ b/_includes/beatrice/01-atoms/01-typography/_01-typography.scss
@@ -265,6 +265,7 @@ td {
   }
   p + &, 
   ul + &,
+  ol + &,
   aside + &,
   .aside + &,
   pre + & {
